# CMPE252-Final-Project

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
configs/: main.yaml
configs/model/: resnet18.yaml  svm.yaml  vit_b16.yaml
src/: analyze_results.py  main.py  ssl_fix.py  visualization.py
src/engine/: trainer_dl.py  trainer_ml.py
src/models/: classical.py  deep_learning.py
src/ui/: callbacks.py  dashboard.py
src/utils/: hardware.py  logger.py  seed.py
