[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cifar10-comparative-analysis"
version = "0.1.0"
requires-python = ">=3.10"
description = "Comparative analysis of classical ML and DL models on CIFAR-10"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "timm>=0.9.0",
    "scikit-learn>=1.4.0",
    "hydra-core>=1.3.0",
    "tensorboard>=2.15.0",
    "matplotlib>=3.8.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "seaborn>=0.13.0",
    "tabulate>=0.9.0",
    "cuml-cu12 ; platform_system == 'Linux'" # Keep RAPIDS available if on Linux
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pre-commit"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]